improved rate of fire logic to use templates.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2073,6 +2073,38 @@ REINST_BP_PlayerPawn_C_35.Rendering=True
 REINST_BP_PlayerPawn_C_35.Replication=True
 REINST_BP_PlayerPawn_C_35.Input=True
 REINST_BP_PlayerPawn_C_35.Actor=True
+BP_MachineGun_C.Tick=True
+BP_MachineGun_C.Weapon=True
+BP_MachineGun_C.Rendering=True
+BP_MachineGun_C.Replication=True
+BP_MachineGun_C.Input=True
+BP_MachineGun_C.Actor=True
+BP_MachineGun_C.Variable=True
+BP_MachineGun_C.TransformCommon=True
+BP_MachineGun_C.Sockets=True
+BP_MachineGun_C.Animation=True
+BP_MachineGun_C.Mesh=True
+BP_MachineGun_C.Clothing=True
+BP_MachineGun_C.MasterPoseComponent=True
+BP_MachineGun_C.Physics=True
+BP_MachineGun_C.Collision=True
+BP_MachineGun_C.ClothingSimulation=True
+BP_MachineGun_C.Lighting=True
+BP_MachineGun_C.Tags=True
+BP_MachineGun_C.ComponentReplication=True
+BP_MachineGun_C.Activation=True
+BP_MachineGun_C.Cooking=True
+BP_MachineGun_C.Events=True
+BP_MachineGun_C.Materials=True
+REINST_BP_PlayerPawn_C_36.Camera=True
+REINST_BP_PlayerPawn_C_36.Tick=True
+REINST_BP_PlayerPawn_C_36.Weapon=True
+REINST_BP_PlayerPawn_C_36.Character=True
+REINST_BP_PlayerPawn_C_36.Pawn=True
+REINST_BP_PlayerPawn_C_36.Rendering=True
+REINST_BP_PlayerPawn_C_36.Replication=True
+REINST_BP_PlayerPawn_C_36.Input=True
+REINST_BP_PlayerPawn_C_36.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2278,25 +2310,25 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/BP_Rifle
-MRUItem2=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem3=/Game/Blueprints/BP_GrenadeProjectile
-MRUItem4=/Game/Blueprints/BP_TargetDummy
-MRUItem5=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem7=/Game/Core/PhysMat_FleshVulnerable
-MRUItem8=/Game/Core/PhysMat_FleshDefault
-MRUItem9=/Game/Blueprints/BP_GrenadeLauncherRecoil
-MRUItem10=/Game/Blueprints/BP_RifleCameraRecoil
-MRUItem11=/Game/Blueprints/BP_Projectile
-MRUItem12=/Game/Blueprints/BP_Rifle2
-MRUItem13=/Game/Weapons/Launcher
-MRUItem14=/Game/Weapons/Launcher_Skeleton
-MRUItem15=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem16=/Game/UI/WBP_SimpleCrosshair
-MRUItem17=/Game/weaponEffects/Muzzle/P_Muzzle_Large
-MRUItem18=/Game/weaponEffects/BloodImpact/P_blood_splash_02
-MRUItem19=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem1=/Game/Blueprints/BP_MachineGun
+MRUItem2=/Game/Blueprints/BP_Rifle
+MRUItem3=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem4=/Game/Blueprints/BP_GrenadeProjectile
+MRUItem5=/Game/Blueprints/BP_TargetDummy
+MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem8=/Game/Core/PhysMat_FleshVulnerable
+MRUItem9=/Game/Core/PhysMat_FleshDefault
+MRUItem10=/Game/Blueprints/BP_GrenadeLauncherRecoil
+MRUItem11=/Game/Blueprints/BP_RifleCameraRecoil
+MRUItem12=/Game/Blueprints/BP_Projectile
+MRUItem13=/Game/Blueprints/BP_Rifle2
+MRUItem14=/Game/Weapons/Launcher
+MRUItem15=/Game/Weapons/Launcher_Skeleton
+MRUItem16=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem17=/Game/UI/WBP_SimpleCrosshair
+MRUItem18=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem19=/Game/weaponEffects/BloodImpact/P_blood_splash_02
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
