--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.19-17.03.37
+CoopGame.TimeStamp=2020.04.19-21.05.05
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -775,6 +775,8 @@ MeshBoneReduction.TimeStamp=2019.12.20-23.26.47
 MeshBoneReduction.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2019.12.20-23.26.52
 PhysicsAssetEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2019.12.20-23.26.26
+AnimationEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -2377,6 +2379,190 @@ NewBlueprint_C.Replication=True
 NewBlueprint_C.Input=True
 NewBlueprint_C.Actor=True
 REINST_BP_PlayerPawn_C_31.None=True
+BP_Shotgun_C.Tick=True
+BP_Shotgun_C.Weapon=True
+BP_Shotgun_C.Rendering=True
+BP_Shotgun_C.Replication=True
+BP_Shotgun_C.Input=True
+BP_Shotgun_C.Actor=True
+REINST_BP_Shotgun_C_32.Tick=True
+REINST_BP_Shotgun_C_32.Weapon=True
+REINST_BP_Shotgun_C_32.Rendering=True
+REINST_BP_Shotgun_C_32.Replication=True
+REINST_BP_Shotgun_C_32.Input=True
+REINST_BP_Shotgun_C_32.Actor=True
+BP_Shotgun_C.Variable=True
+BP_Shotgun_C.TransformCommon=True
+BP_Shotgun_C.Sockets=True
+BP_Shotgun_C.Animation=True
+BP_Shotgun_C.Mesh=True
+BP_Shotgun_C.Clothing=True
+BP_Shotgun_C.MasterPoseComponent=True
+BP_Shotgun_C.Physics=True
+BP_Shotgun_C.Collision=True
+BP_Shotgun_C.ClothingSimulation=True
+BP_Shotgun_C.Lighting=True
+BP_Shotgun_C.Tags=True
+BP_Shotgun_C.ComponentReplication=True
+BP_Shotgun_C.Activation=True
+BP_Shotgun_C.Cooking=True
+BP_Shotgun_C.Events=True
+BP_Shotgun_C.Materials=True
+REINST_BP_Shotgun_C_36.Variable=True
+REINST_BP_Shotgun_C_36.TransformCommon=True
+REINST_BP_Shotgun_C_36.Sockets=True
+REINST_BP_Shotgun_C_36.Animation=True
+REINST_BP_Shotgun_C_36.Mesh=True
+REINST_BP_Shotgun_C_36.Materials=True
+REINST_BP_Shotgun_C_36.Clothing=True
+REINST_BP_Shotgun_C_36.MasterPoseComponent=True
+REINST_BP_Shotgun_C_36.Physics=True
+REINST_BP_Shotgun_C_36.Collision=True
+REINST_BP_Shotgun_C_36.ClothingSimulation=True
+REINST_BP_Shotgun_C_36.Lighting=True
+REINST_BP_Shotgun_C_36.Rendering=True
+REINST_BP_Shotgun_C_36.Tags=True
+REINST_BP_Shotgun_C_36.ComponentReplication=True
+REINST_BP_Shotgun_C_36.Activation=True
+REINST_BP_Shotgun_C_36.Cooking=True
+REINST_BP_Shotgun_C_36.Events=True
+REINST_BP_Shotgun_C_40.Tick=True
+REINST_BP_Shotgun_C_40.Weapon=True
+REINST_BP_Shotgun_C_40.Rendering=True
+REINST_BP_Shotgun_C_40.Replication=True
+REINST_BP_Shotgun_C_40.Input=True
+REINST_BP_Shotgun_C_40.Actor=True
+BP_Shotgun_C.ComponentTick=True
+REINST_BP_Shotgun_C_31.Tick=True
+REINST_BP_Shotgun_C_31.Weapon=True
+REINST_BP_Shotgun_C_31.Rendering=True
+REINST_BP_Shotgun_C_31.Replication=True
+REINST_BP_Shotgun_C_31.Input=True
+REINST_BP_Shotgun_C_31.Actor=True
+REINST_BP_Shotgun_C_35.Tick=True
+REINST_BP_Shotgun_C_35.Weapon=True
+REINST_BP_Shotgun_C_35.Rendering=True
+REINST_BP_Shotgun_C_35.Replication=True
+REINST_BP_Shotgun_C_35.Input=True
+REINST_BP_Shotgun_C_35.Actor=True
+REINST_BP_Shotgun_C_39.Tick=True
+REINST_BP_Shotgun_C_39.Weapon=True
+REINST_BP_Shotgun_C_39.Rendering=True
+REINST_BP_Shotgun_C_39.Replication=True
+REINST_BP_Shotgun_C_39.Input=True
+REINST_BP_Shotgun_C_39.Actor=True
+BP_ShotgunCameraRecoil_C.CameraShake=True
+BP_ShotgunCameraRecoil_C.Oscillation=True
+BP_ShotgunCameraRecoil_C.AnimShake=True
+REINST_BP_Shotgun_C_55.Tick=True
+REINST_BP_Shotgun_C_55.Weapon=True
+REINST_BP_Shotgun_C_55.Rendering=True
+REINST_BP_Shotgun_C_55.Replication=True
+REINST_BP_Shotgun_C_55.Input=True
+REINST_BP_Shotgun_C_55.Actor=True
+REINST_BP_Shotgun_C_71.Tick=True
+REINST_BP_Shotgun_C_71.Weapon=True
+REINST_BP_Shotgun_C_71.Rendering=True
+REINST_BP_Shotgun_C_71.Replication=True
+REINST_BP_Shotgun_C_71.Input=True
+REINST_BP_Shotgun_C_71.Actor=True
+REINST_BP_Shotgun_C_75.Tick=True
+REINST_BP_Shotgun_C_75.Weapon=True
+REINST_BP_Shotgun_C_75.Rendering=True
+REINST_BP_Shotgun_C_75.Replication=True
+REINST_BP_Shotgun_C_75.Input=True
+REINST_BP_Shotgun_C_75.Actor=True
+REINST_BP_Shotgun_C_79.Tick=True
+REINST_BP_Shotgun_C_79.Weapon=True
+REINST_BP_Shotgun_C_79.Rendering=True
+REINST_BP_Shotgun_C_79.Replication=True
+REINST_BP_Shotgun_C_79.Input=True
+REINST_BP_Shotgun_C_79.Actor=True
+REINST_BP_PlayerPawn_C_87.None=True
+REINST_BP_PlayerPawn_C_87.Tick=True
+REINST_BP_PlayerPawn_C_87.Camera=True
+REINST_BP_PlayerPawn_C_87.Weapon=True
+REINST_BP_PlayerPawn_C_87.Character=True
+REINST_BP_PlayerPawn_C_87.Pawn=True
+REINST_BP_PlayerPawn_C_87.Rendering=True
+REINST_BP_PlayerPawn_C_87.Replication=True
+REINST_BP_PlayerPawn_C_87.Input=True
+REINST_BP_PlayerPawn_C_87.Actor=True
+BP_GrenadeLaucnher_C.ComponentTick=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+REINST_BP_PlayerPawn_C_96.None=True
+REINST_BP_PlayerPawn_C_96.Tick=True
+REINST_BP_PlayerPawn_C_96.Camera=True
+REINST_BP_PlayerPawn_C_96.Weapon=True
+REINST_BP_PlayerPawn_C_96.Character=True
+REINST_BP_PlayerPawn_C_96.Pawn=True
+REINST_BP_PlayerPawn_C_96.Rendering=True
+REINST_BP_PlayerPawn_C_96.Replication=True
+REINST_BP_PlayerPawn_C_96.Input=True
+REINST_BP_PlayerPawn_C_96.Actor=True
+REINST_BP_PlayerPawn_C_100.None=True
+REINST_BP_PlayerPawn_C_100.Tick=True
+REINST_BP_PlayerPawn_C_100.Camera=True
+REINST_BP_PlayerPawn_C_100.Weapon=True
+REINST_BP_PlayerPawn_C_100.Character=True
+REINST_BP_PlayerPawn_C_100.Pawn=True
+REINST_BP_PlayerPawn_C_100.Rendering=True
+REINST_BP_PlayerPawn_C_100.Replication=True
+REINST_BP_PlayerPawn_C_100.Input=True
+REINST_BP_PlayerPawn_C_100.Actor=True
+REINST_BP_PlayerPawn_C_104.None=True
+REINST_BP_PlayerPawn_C_104.Tick=True
+REINST_BP_PlayerPawn_C_104.Camera=True
+REINST_BP_PlayerPawn_C_104.Weapon=True
+REINST_BP_PlayerPawn_C_104.Character=True
+REINST_BP_PlayerPawn_C_104.Pawn=True
+REINST_BP_PlayerPawn_C_104.Rendering=True
+REINST_BP_PlayerPawn_C_104.Replication=True
+REINST_BP_PlayerPawn_C_104.Input=True
+REINST_BP_PlayerPawn_C_104.Actor=True
+REINST_BP_MachineGun_C_112.Tick=True
+REINST_BP_MachineGun_C_112.Weapon=True
+REINST_BP_MachineGun_C_112.Rendering=True
+REINST_BP_MachineGun_C_112.Replication=True
+REINST_BP_MachineGun_C_112.Input=True
+REINST_BP_MachineGun_C_112.Actor=True
+REINST_BP_PlayerPawn_C_116.Variable=True
+REINST_BP_PlayerPawn_C_116.TransformCommon=True
+REINST_BP_PlayerPawn_C_116.Sockets=True
+REINST_BP_PlayerPawn_C_116.CameraSettings=True
+REINST_BP_PlayerPawn_C_116.CameraOptions=True
+REINST_BP_PlayerPawn_C_116.PostProcess=True
+REINST_BP_PlayerPawn_C_116.Tags=True
+REINST_BP_PlayerPawn_C_116.ComponentReplication=True
+REINST_BP_PlayerPawn_C_116.Activation=True
+REINST_BP_PlayerPawn_C_116.Cooking=True
+REINST_BP_PlayerPawn_C_116.Events=True
+REINST_BP_PlayerPawn_C_120.Variable=True
+REINST_BP_PlayerPawn_C_120.TransformCommon=True
+REINST_BP_PlayerPawn_C_120.Sockets=True
+REINST_BP_PlayerPawn_C_120.CameraSettings=True
+REINST_BP_PlayerPawn_C_120.CameraOptions=True
+REINST_BP_PlayerPawn_C_120.PostProcess=True
+REINST_BP_PlayerPawn_C_120.Tags=True
+REINST_BP_PlayerPawn_C_120.ComponentReplication=True
+REINST_BP_PlayerPawn_C_120.Activation=True
+REINST_BP_PlayerPawn_C_120.Cooking=True
+REINST_BP_PlayerPawn_C_120.Events=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2412,7 +2598,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Weapons
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2566,12 +2752,13 @@ Widget=
 Visual=
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
-CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
-BP_GrenadeLauncherRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
+CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
+BP_GrenadeLauncherRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 BP_GrenadeProjectile_C=
 SGrenadeProjectile=
 SProjectile=
 REINST_BP_GrenadeProjectile_C_31=
+BP_ShotgunCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Weapons/NewBlueprint.NewBlueprint;
@@ -2582,26 +2769,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem2=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem3=/Game/Blueprints/Weapons/BP_GrenadeLauncher
-MRUItem4=/Game/Blueprints/Weapons/bp_grenadelauncherprojectile
-MRUItem5=/Game/Blueprints/BP_TracerMachineGun
-MRUItem6=/Game/Blueprints/BP_PlayerPawn
-MRUItem7=/Game/Blueprints/BP_TracerRifle
-MRUItem8=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem9=/Game/Blueprints/BP_Rifle
-MRUItem10=/Game/Blueprints/BP_MachineGun
-MRUItem11=/Game/Blueprints/BP_GrenadeProjectile
-MRUItem12=/Game/Blueprints/BP_TargetDummy
-MRUItem13=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem15=/Game/Core/PhysMat_FleshVulnerable
-MRUItem16=/Game/Core/PhysMat_FleshDefault
-MRUItem17=/Game/Blueprints/BP_GrenadeLauncherRecoil
-MRUItem18=/Game/Blueprints/BP_RifleCameraRecoil
-MRUItem19=/Game/Blueprints/BP_Projectile
+MRUItem0=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem1=/Game/AnimStarterPack/Jump_From_Jog
+MRUItem2=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem3=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem4=/Game/Weapons/Launcher_Skeleton
+MRUItem5=/Game/Weapons/Launcher
+MRUItem6=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem7=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem8=/Game/Blueprints/CameraShakes/BP_GrenadeLauncherRecoil
+MRUItem9=/Game/Blueprints/CameraShakes/BP_ShotgunCameraRecoil
+MRUItem10=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem11=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem12=/Game/Blueprints/Weapons/BP_GrenadeLauncher
+MRUItem13=/Game/Blueprints/Weapons/bp_grenadelauncherprojectile
+MRUItem14=/Game/Blueprints/BP_TracerMachineGun
+MRUItem15=/Game/Blueprints/BP_PlayerPawn
+MRUItem16=/Game/Blueprints/BP_TracerRifle
+MRUItem17=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem18=/Game/Blueprints/BP_Rifle
+MRUItem19=/Game/Blueprints/BP_MachineGun
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -2628,6 +2815,9 @@ MRUItem19=/Game/Blueprints/BP_Projectile
 /Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher=0
 /Game/Blueprints/BP_GrenadeProjectile.BP_GrenadeProjectile=0
 /Game/Blueprints/BP_TracerRifle.BP_TracerRifle=0
+/Game/Blueprints/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher=0
+/Game/AnimStarterPack/Jump_From_Jog.Jump_From_Jog=0
+/Game/Blueprints/CameraShakes/BP_GrenadeLauncherRecoil.BP_GrenadeLauncherRecoil=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2660,6 +2850,8 @@ Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 Contexts=(Name="PhysicsAssetEditor",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
