--- a/CoopGame/Saved/Config/Windows/Input.ini
+++ b/CoopGame/Saved/Config/Windows/Input.ini
@@ -2,8 +2,9 @@
 HistoryBuffer=show Collision
 HistoryBuffer=COOP.DebugWeapons 2
 HistoryBuffer=coop
+HistoryBuffer=COOP.DebugWeapons 0
 HistoryBuffer=COOP.DebugWeapons
 HistoryBuffer=COOP.DebugWeapons 1
-HistoryBuffer=COOP.DebugWeapons 0
+HistoryBuffer=COOP.DebugSingleTrace 1
 
 
