Created weapon reload logic. Added default cone half radius for STracerMulti.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.19-21.05.05
+CoopGame.TimeStamp=2020.04.19-22.28.10
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2258,7 +2258,7 @@ REINST_BP_TracerRifle_C_32.Rendering=True
 REINST_BP_TracerRifle_C_32.Replication=True
 REINST_BP_TracerRifle_C_32.Input=True
 REINST_BP_TracerRifle_C_32.Actor=True
-BP_PlayerPawn_C.Default=True
+BP_PlayerPawn_C.Default=False
 REINST_BP_PlayerPawn_C_36.None=True
 REINST_BP_PlayerPawn_C_45.None=True
 REINST_BP_PlayerPawn_C_61.None=True
@@ -2563,9 +2563,46 @@ REINST_BP_PlayerPawn_C_120.ComponentReplication=True
 REINST_BP_PlayerPawn_C_120.Activation=True
 REINST_BP_PlayerPawn_C_120.Cooking=True
 REINST_BP_PlayerPawn_C_120.Events=True
+REINST_BP_MachineGun_C_31.Tick=True
+REINST_BP_MachineGun_C_31.Weapon=True
+REINST_BP_MachineGun_C_31.Rendering=True
+REINST_BP_MachineGun_C_31.Replication=True
+REINST_BP_MachineGun_C_31.Input=True
+REINST_BP_MachineGun_C_31.Actor=True
+REINST_BP_MachineGun_C_35.Tick=True
+REINST_BP_MachineGun_C_35.Weapon=True
+REINST_BP_MachineGun_C_35.Rendering=True
+REINST_BP_MachineGun_C_35.Replication=True
+REINST_BP_MachineGun_C_35.Input=True
+REINST_BP_MachineGun_C_35.Actor=True
+REINST_BP_PlayerPawn_C_39.None=True
+REINST_BP_PlayerPawn_C_43.None=True
+REINST_BP_Shotgun_C_47.Tick=True
+REINST_BP_Shotgun_C_47.Weapon=True
+REINST_BP_Shotgun_C_47.Rendering=True
+REINST_BP_Shotgun_C_47.Replication=True
+REINST_BP_Shotgun_C_47.Input=True
+REINST_BP_Shotgun_C_47.Actor=True
+Ue4ASP_Character_C.Default=True
+Ue4ASP_Character_C.Tick=True
+Ue4ASP_Character_C.Character=True
+Ue4ASP_Character_C.Camera=True
+Ue4ASP_Character_C.Pawn=True
+Ue4ASP_Character_C.Rendering=True
+Ue4ASP_Character_C.Replication=True
+Ue4ASP_Character_C.Input=True
+Ue4ASP_Character_C.Actor=True
+AnimStateConduitNode.GraphNodeDetail=True
+REINST_BP_PlayerPawn_C_53.None=True
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn
+OpenAssetsAtExit=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin.SK_Mannequin
+OpenAssetsAtExit=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset
+OpenAssetsAtExit=/Game/AnimStarterPack/Ue4ASP_Character.Ue4ASP_Character
+OpenAssetsAtExit=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint
+OpenAssetsAtExit=/Game/AnimStarterPack/Reload_Rifle_Hip.Reload_Rifle_Hip
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2598,7 +2635,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Weapons
+ContentBrowserTab1.SelectedPaths=/Game/AnimStarterPack
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2769,26 +2806,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem1=/Game/AnimStarterPack/Jump_From_Jog
-MRUItem2=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem3=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem4=/Game/Weapons/Launcher_Skeleton
-MRUItem5=/Game/Weapons/Launcher
-MRUItem6=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem0=/Game/AnimStarterPack/Reload_Rifle_Hip
+MRUItem1=/Game/AnimStarterPack/Reload_Pistol
+MRUItem2=/Game/AnimStarterPack/Reload_Rifle_Ironsights
+MRUItem3=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem4=/Game/AnimStarterPack/Ue4ASP_Character
+MRUItem5=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
 MRUItem7=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem8=/Game/Blueprints/CameraShakes/BP_GrenadeLauncherRecoil
-MRUItem9=/Game/Blueprints/CameraShakes/BP_ShotgunCameraRecoil
-MRUItem10=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem11=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem12=/Game/Blueprints/Weapons/BP_GrenadeLauncher
-MRUItem13=/Game/Blueprints/Weapons/bp_grenadelauncherprojectile
-MRUItem14=/Game/Blueprints/BP_TracerMachineGun
-MRUItem15=/Game/Blueprints/BP_PlayerPawn
-MRUItem16=/Game/Blueprints/BP_TracerRifle
-MRUItem17=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem18=/Game/Blueprints/BP_Rifle
-MRUItem19=/Game/Blueprints/BP_MachineGun
+MRUItem8=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem9=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem10=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem11=/Game/AnimStarterPack/Jump_From_Jog
+MRUItem12=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem13=/Game/Weapons/Launcher_Skeleton
+MRUItem14=/Game/Weapons/Launcher
+MRUItem15=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem16=/Game/Blueprints/CameraShakes/BP_GrenadeLauncherRecoil
+MRUItem17=/Game/Blueprints/CameraShakes/BP_ShotgunCameraRecoil
+MRUItem18=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem19=/Game/Blueprints/Weapons/BP_GrenadeLauncher
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -2818,6 +2855,9 @@ MRUItem19=/Game/Blueprints/BP_MachineGun
 /Game/Blueprints/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher=0
 /Game/AnimStarterPack/Jump_From_Jog.Jump_From_Jog=0
 /Game/Blueprints/CameraShakes/BP_GrenadeLauncherRecoil.BP_GrenadeLauncherRecoil=0
+/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin.SK_Mannequin=0
+/Game/AnimStarterPack/Reload_Rifle_Ironsights.Reload_Rifle_Ironsights=0
+/Game/AnimStarterPack/Reload_Pistol.Reload_Pistol=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
