--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.19-22.28.10
+CoopGame.TimeStamp=2020.04.20-13.29.58
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2594,15 +2594,77 @@ Ue4ASP_Character_C.Input=True
 Ue4ASP_Character_C.Actor=True
 AnimStateConduitNode.GraphNodeDetail=True
 REINST_BP_PlayerPawn_C_53.None=True
+WBP_SimpleCrosshair_C.Appearance=True
+WBP_SimpleCrosshair_C.Input=True
+WBP_SimpleCrosshair_C.Interaction=True
+WBP_SimpleCrosshair_C.Behavior=True
+WBP_SimpleCrosshair_C.Render Transform=True
+WBP_SimpleCrosshair_C.Performance=True
+WBP_SimpleCrosshair_C.Clipping=True
+WBP_SimpleCrosshair_C.Navigation=True
+WBP_SimpleCrosshair_C.Localization=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Behavior=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Clipping=True
+EditableTextBox.Navigation=True
+EditableTextBox.Localization=True
+EditableTextBox.Events=True
+WBP_AmmoInfo_C.Appearance=True
+WBP_AmmoInfo_C.Designer=True
+WBP_AmmoInfo_C.Input=True
+WBP_AmmoInfo_C.Interaction=True
+WBP_AmmoInfo_C.Performance=True
+WBP_AmmoInfo_C.Layout=True
+WBP_AmmoInfo_C.Behavior=True
+WBP_AmmoInfo_C.Render Transform=True
+WBP_AmmoInfo_C.Clipping=True
+WBP_AmmoInfo_C.Navigation=True
+WBP_AmmoInfo_C.Localization=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+REINST_BP_Rifle_C_93.Tick=True
+REINST_BP_Rifle_C_93.Weapon=True
+REINST_BP_Rifle_C_93.Rendering=True
+REINST_BP_Rifle_C_93.Replication=True
+REINST_BP_Rifle_C_93.Input=True
+REINST_BP_Rifle_C_93.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn
-OpenAssetsAtExit=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin.SK_Mannequin
-OpenAssetsAtExit=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset
-OpenAssetsAtExit=/Game/AnimStarterPack/Ue4ASP_Character.Ue4ASP_Character
-OpenAssetsAtExit=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint
-OpenAssetsAtExit=/Game/AnimStarterPack/Reload_Rifle_Hip.Reload_Rifle_Hip
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2635,7 +2697,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/AnimStarterPack
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Weapons
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2750,12 +2812,13 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bi
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
-K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
+K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
 BP_GrenadeProjectile_C=BP_GrenadeProjectile_C.Collision.Collision,
+SWeapon=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
@@ -2796,6 +2859,8 @@ SGrenadeProjectile=
 SProjectile=
 REINST_BP_GrenadeProjectile_C_31=
 BP_ShotgunCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Weapons/NewBlueprint.NewBlueprint;
@@ -2806,26 +2871,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AnimStarterPack/Reload_Rifle_Hip
-MRUItem1=/Game/AnimStarterPack/Reload_Pistol
-MRUItem2=/Game/AnimStarterPack/Reload_Rifle_Ironsights
-MRUItem3=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem4=/Game/AnimStarterPack/Ue4ASP_Character
-MRUItem5=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem7=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem8=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem9=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem10=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem11=/Game/AnimStarterPack/Jump_From_Jog
-MRUItem12=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem13=/Game/Weapons/Launcher_Skeleton
-MRUItem14=/Game/Weapons/Launcher
-MRUItem15=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem16=/Game/Blueprints/CameraShakes/BP_GrenadeLauncherRecoil
-MRUItem17=/Game/Blueprints/CameraShakes/BP_ShotgunCameraRecoil
-MRUItem18=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem19=/Game/Blueprints/Weapons/BP_GrenadeLauncher
+MRUItem0=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem1=/Game/UI/WBP_AmmoInfo
+MRUItem2=/Game/UI/WBP_SimpleCrosshair
+MRUItem3=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem4=/Game/AnimStarterPack/Reload_Rifle_Hip
+MRUItem5=/Game/AnimStarterPack/Reload_Pistol
+MRUItem6=/Game/AnimStarterPack/Reload_Rifle_Ironsights
+MRUItem7=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem8=/Game/AnimStarterPack/Ue4ASP_Character
+MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem10=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem11=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem12=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem13=/Game/AnimStarterPack/Jump_From_Jog
+MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem15=/Game/Weapons/Launcher_Skeleton
+MRUItem16=/Game/Weapons/Launcher
+MRUItem17=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem18=/Game/Blueprints/CameraShakes/BP_GrenadeLauncherRecoil
+MRUItem19=/Game/Blueprints/CameraShakes/BP_ShotgunCameraRecoil
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -2858,6 +2923,8 @@ MRUItem19=/Game/Blueprints/Weapons/BP_GrenadeLauncher
 /Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin.SK_Mannequin=0
 /Game/AnimStarterPack/Reload_Rifle_Ironsights.Reload_Rifle_Ironsights=0
 /Game/AnimStarterPack/Reload_Pistol.Reload_Pistol=0
+/Game/UI/WBP_SimpleCrosshair.WBP_SimpleCrosshair=0
+/Game/UI/WBP_AmmoInfo.WBP_AmmoInfo=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2981,15 +3048,14 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [WidgetTemplatesExpanded]
-Common=False
 Input=False
 Lists=False
 Misc=False
 Optimization=False
-Panel=False
-Primitive=False
+Panel=True
+Primitive=True
 Special Effects=False
-Uncategorized=False
+Uncategorized=True
 User Created=False
 
 [UMGEditor.Designer]
