made character's held weapon readable in blueprints.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-14.49.06
+CoopGame.TimeStamp=2020.04.20-15.00.19
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2662,6 +2662,18 @@ REINST_BP_Rifle_C_93.Rendering=True
 REINST_BP_Rifle_C_93.Replication=True
 REINST_BP_Rifle_C_93.Input=True
 REINST_BP_Rifle_C_93.Actor=True
+REINST_BP_Rifle_C_35.Tick=True
+REINST_BP_Rifle_C_35.Weapon=True
+REINST_BP_Rifle_C_35.Rendering=True
+REINST_BP_Rifle_C_35.Replication=True
+REINST_BP_Rifle_C_35.Input=True
+REINST_BP_Rifle_C_35.Actor=True
+REINST_BP_Rifle_C_39.Tick=True
+REINST_BP_Rifle_C_39.Weapon=True
+REINST_BP_Rifle_C_39.Rendering=True
+REINST_BP_Rifle_C_39.Replication=True
+REINST_BP_Rifle_C_39.Input=True
+REINST_BP_Rifle_C_39.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2697,7 +2709,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Weapons
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2871,9 +2883,9 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem0=/Game/UI/WBP_AmmoInfo
 MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem2=/Game/UI/WBP_AmmoInfo
+MRUItem2=/Game/Blueprints/Weapons/BP_Rifle
 MRUItem3=/Game/UI/WBP_SimpleCrosshair
 MRUItem4=/Game/AnimStarterPack/Reload_Rifle_Hip
 MRUItem5=/Game/AnimStarterPack/Reload_Pistol
