created ui widget showing weapon's ammo info.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-15.00.19
+CoopGame.TimeStamp=2020.04.20-15.26.11
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2831,6 +2831,7 @@ ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Renderin
 PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
 BP_GrenadeProjectile_C=BP_GrenadeProjectile_C.Collision.Collision,
 SWeapon=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+SCharacter=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
