--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-15.26.11
+CoopGame.TimeStamp=2020.04.20-15.37.27
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2674,6 +2674,54 @@ REINST_BP_Rifle_C_39.Rendering=True
 REINST_BP_Rifle_C_39.Replication=True
 REINST_BP_Rifle_C_39.Input=True
 REINST_BP_Rifle_C_39.Actor=True
+REINST_BP_PlayerPawn_C_32.None=True
+REINST_BP_PlayerPawn_C_32.Tick=True
+REINST_BP_PlayerPawn_C_32.Camera=True
+REINST_BP_PlayerPawn_C_32.Weapon=True
+REINST_BP_PlayerPawn_C_32.Character=True
+REINST_BP_PlayerPawn_C_32.Pawn=True
+REINST_BP_PlayerPawn_C_32.Rendering=True
+REINST_BP_PlayerPawn_C_32.Replication=True
+REINST_BP_PlayerPawn_C_32.Input=True
+REINST_BP_PlayerPawn_C_32.Actor=True
+REINST_BP_Shotgun_C_36.Tick=True
+REINST_BP_Shotgun_C_36.Weapon=True
+REINST_BP_Shotgun_C_36.Replication=True
+REINST_BP_Shotgun_C_36.Input=True
+REINST_BP_Shotgun_C_36.Actor=True
+REINST_BP_MachineGun_C_44.Tick=True
+REINST_BP_MachineGun_C_44.Weapon=True
+REINST_BP_MachineGun_C_44.Rendering=True
+REINST_BP_MachineGun_C_44.Replication=True
+REINST_BP_MachineGun_C_44.Input=True
+REINST_BP_MachineGun_C_44.Actor=True
+REINST_BP_PlayerPawn_C_48.None=True
+REINST_BP_PlayerPawn_C_48.Tick=True
+REINST_BP_PlayerPawn_C_48.Camera=True
+REINST_BP_PlayerPawn_C_48.Weapon=True
+REINST_BP_PlayerPawn_C_48.Character=True
+REINST_BP_PlayerPawn_C_48.Pawn=True
+REINST_BP_PlayerPawn_C_48.Rendering=True
+REINST_BP_PlayerPawn_C_48.Replication=True
+REINST_BP_PlayerPawn_C_48.Input=True
+REINST_BP_PlayerPawn_C_48.Actor=True
+REINST_BP_GrenadeLaucnher_C_52.Tick=True
+REINST_BP_GrenadeLaucnher_C_52.Projectile=True
+REINST_BP_GrenadeLaucnher_C_52.Weapon=True
+REINST_BP_GrenadeLaucnher_C_52.Rendering=True
+REINST_BP_GrenadeLaucnher_C_52.Replication=True
+REINST_BP_GrenadeLaucnher_C_52.Input=True
+REINST_BP_GrenadeLaucnher_C_52.Actor=True
+REINST_BP_PlayerPawn_C_56.None=True
+REINST_BP_PlayerPawn_C_56.Tick=True
+REINST_BP_PlayerPawn_C_56.Camera=True
+REINST_BP_PlayerPawn_C_56.Weapon=True
+REINST_BP_PlayerPawn_C_56.Character=True
+REINST_BP_PlayerPawn_C_56.Pawn=True
+REINST_BP_PlayerPawn_C_56.Rendering=True
+REINST_BP_PlayerPawn_C_56.Replication=True
+REINST_BP_PlayerPawn_C_56.Input=True
+REINST_BP_PlayerPawn_C_56.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2709,7 +2757,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Weapons
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2884,24 +2932,24 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_AmmoInfo
-MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem2=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem3=/Game/UI/WBP_SimpleCrosshair
-MRUItem4=/Game/AnimStarterPack/Reload_Rifle_Hip
-MRUItem5=/Game/AnimStarterPack/Reload_Pistol
-MRUItem6=/Game/AnimStarterPack/Reload_Rifle_Ironsights
-MRUItem7=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem8=/Game/AnimStarterPack/Ue4ASP_Character
-MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem10=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem11=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem12=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem13=/Game/AnimStarterPack/Jump_From_Jog
-MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem15=/Game/Weapons/Launcher_Skeleton
-MRUItem16=/Game/Weapons/Launcher
-MRUItem17=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem0=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem1=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem2=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem3=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem4=/Game/UI/WBP_AmmoInfo
+MRUItem5=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem6=/Game/UI/WBP_SimpleCrosshair
+MRUItem7=/Game/AnimStarterPack/Reload_Rifle_Hip
+MRUItem8=/Game/AnimStarterPack/Reload_Pistol
+MRUItem9=/Game/AnimStarterPack/Reload_Rifle_Ironsights
+MRUItem10=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem11=/Game/AnimStarterPack/Ue4ASP_Character
+MRUItem12=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem13=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem14=/Game/AnimStarterPack/Jump_From_Jog
+MRUItem15=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem16=/Game/Weapons/Launcher_Skeleton
+MRUItem17=/Game/Weapons/Launcher
 MRUItem18=/Game/Blueprints/CameraShakes/BP_GrenadeLauncherRecoil
 MRUItem19=/Game/Blueprints/CameraShakes/BP_ShotgunCameraRecoil
 
