a reload action should be added next. Reload complete.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-15.37.27
+CoopGame.TimeStamp=2020.04.20-15.50.18
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2724,7 +2724,7 @@ REINST_BP_PlayerPawn_C_56.Input=True
 REINST_BP_PlayerPawn_C_56.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2932,10 +2932,10 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem1=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem2=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem3=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem0=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem2=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem3=/Game/Blueprints/Weapons/BP_MachineGun
 MRUItem4=/Game/UI/WBP_AmmoInfo
 MRUItem5=/Game/Blueprints/Weapons/BP_Rifle
 MRUItem6=/Game/UI/WBP_SimpleCrosshair
