--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-15.50.18
+CoopGame.TimeStamp=2020.04.20-18.30.47
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2722,9 +2722,22 @@ REINST_BP_PlayerPawn_C_56.Rendering=True
 REINST_BP_PlayerPawn_C_56.Replication=True
 REINST_BP_PlayerPawn_C_56.Input=True
 REINST_BP_PlayerPawn_C_56.Actor=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+AssetViewerSettings.Settings=True
+BlendSpace.InputInterpolation=True
+BlendSpace.Axis Settings=True
+BlendSpace.AdditiveSettings=True
+BlendSpace.BlendSamples=True
+BlendSpace.Animation=True
+BlendSpace.SampleInterpolation=True
+BlendSpace.AnimationNotifies=True
+BlendSpace.MetaData=True
+BlendSpace.Thumbnail=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2757,7 +2770,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Weapons
+ContentBrowserTab1.SelectedPaths=/Game/AnimStarterPack
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2932,31 +2945,31 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem2=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem3=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem4=/Game/UI/WBP_AmmoInfo
-MRUItem5=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem6=/Game/UI/WBP_SimpleCrosshair
-MRUItem7=/Game/AnimStarterPack/Reload_Rifle_Hip
-MRUItem8=/Game/AnimStarterPack/Reload_Pistol
-MRUItem9=/Game/AnimStarterPack/Reload_Rifle_Ironsights
-MRUItem10=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem11=/Game/AnimStarterPack/Ue4ASP_Character
-MRUItem12=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem13=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem14=/Game/AnimStarterPack/Jump_From_Jog
-MRUItem15=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem16=/Game/Weapons/Launcher_Skeleton
-MRUItem17=/Game/Weapons/Launcher
-MRUItem18=/Game/Blueprints/CameraShakes/BP_GrenadeLauncherRecoil
-MRUItem19=/Game/Blueprints/CameraShakes/BP_ShotgunCameraRecoil
+MRUItem0=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem1=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem2=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem3=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem4=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem5=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem6=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem7=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem8=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem9=/Game/UI/WBP_AmmoInfo
+MRUItem10=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem11=/Game/UI/WBP_SimpleCrosshair
+MRUItem12=/Game/AnimStarterPack/Reload_Rifle_Hip
+MRUItem13=/Game/AnimStarterPack/Reload_Pistol
+MRUItem14=/Game/AnimStarterPack/Reload_Rifle_Ironsights
+MRUItem15=/Game/AnimStarterPack/Ue4ASP_Character
+MRUItem16=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem17=/Game/AnimStarterPack/Jump_From_Jog
+MRUItem18=/Game/Weapons/Launcher_Skeleton
+MRUItem19=/Game/Weapons/Launcher
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
 /Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation=0
-/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=1
+/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=0
 /Game/Blueprints/BP_Rifle.BP_Rifle=0
 /Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
 /Game/Weapons/SK_Rifle.SK_Rifle=0
@@ -2986,6 +2999,7 @@ MRUItem19=/Game/Blueprints/CameraShakes/BP_ShotgunCameraRecoil
 /Game/AnimStarterPack/Reload_Pistol.Reload_Pistol=0
 /Game/UI/WBP_SimpleCrosshair.WBP_SimpleCrosshair=0
 /Game/UI/WBP_AmmoInfo.WBP_AmmoInfo=0
+/Game/AnimStarterPack/BS_CrouchWalk.BS_CrouchWalk=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
