handle for taking damage implemented.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-18.30.47
+CoopGame.TimeStamp=2020.04.20-18.35.26
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2735,9 +2735,17 @@ BlendSpace.SampleInterpolation=True
 BlendSpace.AnimationNotifies=True
 BlendSpace.MetaData=True
 BlendSpace.Thumbnail=True
+SHealthComponent.Variable=True
+SHealthComponent.Sockets=True
+SHealthComponent.HealthComponent=True
+SHealthComponent.Tags=True
+SHealthComponent.ComponentReplication=True
+SHealthComponent.Activation=True
+SHealthComponent.Cooking=True
+SHealthComponent.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2945,13 +2953,13 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem1=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem2=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem3=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem4=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem5=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem6=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem1=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem2=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem3=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem4=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem5=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem6=/Game/Blueprints/Weapons/BP_Shotgun
 MRUItem7=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
 MRUItem8=/Game/Blueprints/Weapons/BP_MachineGun
 MRUItem9=/Game/UI/WBP_AmmoInfo
