added damageTakerHandle as UFUNCTION because it's an event.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.20-18.35.26
+CoopGame.TimeStamp=2020.04.20-19.23.16
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2743,6 +2743,9 @@ SHealthComponent.ComponentReplication=True
 SHealthComponent.Activation=True
 SHealthComponent.Cooking=True
 SHealthComponent.Events=True
+REINST_BP_PlayerPawn_C_34.CameraCollision=True
+REINST_BP_PlayerPawn_C_34.Lag=True
+REINST_BP_PlayerPawn_C_34.Weapon=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -2905,10 +2908,10 @@ SCharacter=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.Te
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
 Object=
-BP_PlayerPawn_C=
-SCharacter=
-Character=
-Pawn=
+BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -2924,7 +2927,7 @@ SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.Bo
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+ActorComponent=
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -2945,6 +2948,7 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/Weapons/NewBlueprint.NewBlueprint;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
